--- a/blog-posts/Ex3.html
+++ b/blog-posts/Ex3.html
@@ -11,10 +11,10 @@
     />
     <link rel="stylesheet" href="../style.css" />
   </head>
-  <body id="body_post3">
+  <body class="sub-pages" id="body_post3">
     <nav>
       <ul>
-        <a href="../index.html"><li>Home</li></a>
+        <a href="../index.html"><li>home</li></a>
         <a href="../about.html"><li>about</li></a>
         <a href="../contact.html"><li>contact</li></a>
       </ul>
