--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img
-      id="img_header_home"
-      src="./img/peasants-in-autumn.webp"
-      alt="an image of autumn by artist  Katsushika Hokusai, Peasants in Autumn, 1835-1836"
-      title="image Peasants in Autumn by Katsushika Hokusai"
-    />
     <header>
+      <img
+        id="img_header_home"
+        src="./img/roxana_hill.jpg"
+        alt="an image by roxana hill: 2 women walking away from a burning house, while holding each others hands, looking at each other and laughing together"
+        title="'Laughing While Leaving' by Roxana Hill (2018), Quelle: https://roxanahalls.com/section/145477-LIMITED-EDITION-PRINTS.html"
+      />
+
+      <h1>Interesting Exhibitions in Berlin - autumn 2022</h1>
       <nav>
         <ul>
-          <a href="./index.html"><li>Home</li></a>
+          <a href="./index.html"><li>home</li></a>
           <a href="./about.html"><li>about</li></a>
           <a href="./contact.html"><li>contact</li></a>
         </ul>
@@ -25,7 +27,6 @@
     </header>
 
     <main>
-      <h1>Interesting Exhibitions in Berlin this autumn</h1>
       <div>
         <h2>A city full of art</h2>
         <img
