--- a/blog-posts/Ex1.html
+++ b/blog-posts/Ex1.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="../style.css" />
   </head>
 
-  <body id="body_post1">
+  <body class="sub-pages" id="body_post1">
     <nav>
       <ul>
-        <a href="../index.html"><li>Home</li></a>
+        <a href="../index.html"><li>home</li></a>
         <a href="../about.html"><li>about</li></a>
         <a href="../contact.html"><li>contact</li></a>
       </ul>
